--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,25 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+<style>
+ 
+    @media only screen and (max-width:500px) {
+      /* For mobile phones: */
+     .images, .home, .detel, .social{
+        width: 20%;
+      }
+    }
+    @media only screen and (max-width:800px) {
+      /* For tablets: */
+      .detel {
+        width: 20%;
+        padding: 0;
+      }
+      .right {
+        width: 100%;
+      }
+    }
+    </style>
 <body>
     <div class="hero">
         <nav>
@@ -27,6 +47,6 @@
            
         </div>
         <div class="images">
-            <img src="images/shape.png" class="shape">
-            <img src="images/hi.png" class="girl">
+            <img src="images/shape.png" class="shape" style="width:90%">
+            <img src="images/hi.png" class="girl" style="width:90%">
         </div>
