--- a/services.html
+++ b/services.html
@@ -23,6 +23,34 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
+
+    h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+ 
+ @media only screen and (max-width:500px) {
+   /* For mobile phones: */
+  .images, .home, .detel, .social{
+     width: 20%;
+   }
+ }
+ @media only screen and (max-width:800px) {
+   /* For tablets: */
+   .detel {
+     width: 20%;
+     padding: 0;
+   }
+   .right {
+     width: 100%;
+   }
+ }
+
+
     </style>
 <body>
     <div class="hero">
