--- a/cv.html
+++ b/cv.html
@@ -13,6 +13,7 @@
 <style>
     h1 {
   font-size: 40px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h2 {
@@ -58,7 +59,6 @@ h2 {
 
     <img src="images/cv.png" style="width: 90%" >
     <div class="imagess">
-        <img src="images/pd.jpg"width="15000" height="200" style="width: 90%">
     </div>
     
 
