--- a/services.html
+++ b/services.html
@@ -35,8 +35,12 @@ h2 {
  
  @media only screen and (max-width:500px) {
    /* For mobile phones: */
-  .images, .home, .detel, .social{
+  .images, .home, .social{
      width: 20%;
+   }
+   .detel{
+    width: auto;
+    height: auto;
    }
  }
  @media only screen and (max-width:800px) {
