--- a/about.html
+++ b/about.html
@@ -11,23 +11,28 @@
 </head>
 <style>
  
-    @media only screen and (max-width:500px) {
-      /* For mobile phones: */
-     .images, .home, .detel, .social{
-        width: 20%;
-      }
+  @media only screen and (max-width:500px) {
+    /* For mobile phones: */
+   .detel, .home, .social{
+      width: 20%;
+      
     }
-    @media only screen and (max-width:800px) {
-      /* For tablets: */
-      .detel {
-        width: 20%;
-        padding: 0;
-      }
-      .right {
-        width: 100%;
-      }
+    .ima{
+      height: 12%;
+      width: 17%;
     }
-    </style>
+  }
+  @media only screen and (max-width:800px) {
+    /* For tablets: */
+    .detel {
+      width: 70%;
+      padding: 0;
+    }
+    .right {
+      width: 100%;
+    }
+  }
+  </style>
 <body>
     <div class="hero">
         <nav>
@@ -46,7 +51,7 @@
             <p>My Self Mohamed Rizwan a BCA Final Year Student .I AM Basically a Android Developer<br> And A WebPage Designer. Also Learning Ethical Hacking For A Knowlwdge About It.<br>All My Works Releated To Android Development And WebPage Designing Will Be Shown <br> Here For Reviewing With All The CopyRight Reserved To MG CopyRights2020 Which Is Owned <br>BY Myself If You Would Like To Contact Me After Seeing Any Of My Work Please Click<br>The Contact Me Tab In The Top Left.</p>
            
         </div>
-        <div class="images">
+        <div class="ima">
             <img src="images/shape.png" class="shape" style="width:90%">
             <img src="images/hi.png" class="girl" style="width:90%">
         </div>
