--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
  
 @media only screen and (max-width:500px) {
   /* For mobile phones: */
- .images, .home, .detel, .social{
+ .detel, .home, .social{
     width: 20%;
+    
+  }
+  .images{
+    height: 12%;
+    width: 17%;
   }
 }
 @media only screen and (max-width:800px) {
   /* For tablets: */
   .detel {
-    width: 20%;
+    width: 70%;
     padding: 0;
   }
   .right {
@@ -41,9 +46,9 @@
             </ul>
         </nav>
         <div class="detel">
-            <h1>I'M Mohamed <span>Rizwan</span></h1>
+            <h1>I'm Mohamed <span>Rizwan</span></h1>
             <p>This is my official website to showcase my 
-                all works related to <br> Android Development and Wed Designing , Also my details like Bio data and other datas <br>and are also given here. </p>
+                all works related to  Android Development and Wed Designing , Also my details like Bio data and other datas and are also given here. </p>
             <a href="cv.html">Download RESUME</a>
         </div>
         <div class="images">
@@ -52,8 +57,8 @@
         </div>
 
         <div class="social">
-           <a href="https://www.youtube.com/c/MALAYALIGAMERYT"><i class="fab fa-youtube"></i></a>
-           <a href="https://www.instagram.com/_rizwan.8/"><i class="fab fa-instagram"></i></a>
+           
+           <a href="https://github.com/riz9882"><i class="fab fa-github"></i></a>
            <a href="https://www.linkedin.com/in/mohamed-rizwan-b667a1248/"><i class="fab fa-linkedin"></i></a>
         </div>
     </div>
