--- a/services.html
+++ b/services.html
@@ -70,12 +70,24 @@ h2 {
         </nav>
 
         <div class="detel">
-            <h1>PROJECTS ARE UNDER DEVELOPMENT <span> AVAILABLE SERVICES ARE :</span></h1>
-            </div>
+            <h1>PROJECTS AND <SPAN>AVAILABLE SERVICES ARE :</SPAN></h1>
+
+
+      
+  <img src="images/agrow.png"width="150" height="200" alt="Snow" style="width:100%;">
+ 
+  <div class="centered" color="red"> <br>
+    <br>
+    <br>
+    <br><br><br><BR><BR><BR><br><br><br><BR><BR><BR><br><br><br><BR><BR><BR><br><br><br><BR>AGROW is basically a Android Appilication which is developed with the aim to help the Farmers across the country.Thw demo version of the project will be avalilable soon.</div>
+</div>
+
 
 <div class="container">
+
+  <h1>AVAILABLE PROJECTS ARE :</h1>
   <img src="images/ad.jpg"width="1500" height="200" alt="Snow" style="width:100%;">
  
-  <div class="centered">ANDROID DEVELOPMENT</div>
+  <div class="centered"> AVAILABLE SERVICE IS :<BR>ANDROID DEVELOPMENT</div>
 </div>
 
