--- a/services.html
+++ b/services.html
@@ -75,7 +75,7 @@ h2 {
 
             <ul>
                 
-              <li><a href="https://riz9882.github.io/tictok-games/">TICTOK GAME</a></li>
+              <li><a href="https://riz9882.github.io/tictok-game/">TICTOK GAME</a></li>
               
           </ul>
           </div>
