--- a/cv.html
+++ b/cv.html
@@ -57,7 +57,7 @@ h2 {
         <h1>   RESUME</h1>
     </div>
 
-    <img src="images/cvnew.jpg" style="width: 90%" >
+    <img src="images/res.png" style="width: 90%" >
     <div class="imagess">
     </div>
     
