--- a/hire.html
+++ b/hire.html
@@ -31,6 +31,20 @@
       width: 100%;
     }
   }
+
+
+  .box {
+  animation: moveIn 5s;
+}
+
+@keyframes moveIn {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
   </style>
 <body>
     <div class="hero">
