--- a/cv.html
+++ b/cv.html
@@ -50,7 +50,7 @@ h2 {
                 <li><a href="about.html">ABOUT</a></li>
         
                 <li><a href="services.html">SERVICES/PROJECTS</a></li>
-                <li><a href="hire.html">HIRE ME</a></li>
+                <li><a href="hire.html">CONTACT ME</a></li>
             </ul>
         </nav>
     <div class="detel">
