--- a/hire.html
+++ b/hire.html
@@ -53,7 +53,7 @@
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="cv.html">PORTFOLIO</a></li>
+                <li><a href="cv.html">CV / RESUME</a></li>
                 <li><a href="services.html">SERVICES/PROJECTS</a></li>
                 
             </ul>
