--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul>
                 
                 <li><a href="about.html">ABOUT </a></li>
-                <li><a href="cv.html">PORTFOLIO</a></li>
+                <li><a href="cv.html">CV / RESUME</a></li>
                 <li><a href="services.html">SERVICES/PROJECTS</a></li>
                 <li><a href="hire.html">CONTACT ME</a></li>
             </ul>
