--- a/services.html
+++ b/services.html
@@ -63,9 +63,9 @@ h2 {
             <ul>
                 
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="cv.html">PORTFOLIO</a></li>
+                <li><a href="cv.html">CV / RESUME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="hire.html">HIRE ME</a></li>
+                <li><a href="hire.html">CONTACT ME</a></li>
             </ul>
         </nav>
 
