--- a/about.html
+++ b/about.html
@@ -42,13 +42,13 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="cv.html">PORTFOLIO</a></li>
                 <li><a href="services.html">SERVICES/PROJECTS</a></li>
-                <li><a href="hire.html">HIRE ME</a></li>
+                <li><a href="hire.html">CONTACT ME</a></li>
             </ul>
         </nav>
 
         <div class="detel">
             <h1>ABOUT <span>ME</span></h1>
-            <p>My Self Mohamed Rizwan a BCA Final Year Student .I AM Basically a Android Developer<br> And A WebPage Designer. Also Learning Ethical Hacking For A Knowlwdge About It.<br>All My Works Releated To Android Development And WebPage Designing Will Be Shown <br> Here For Reviewing With All The CopyRight Reserved To MG CopyRights2020 Which Is Owned <br>BY Myself If You Would Like To Contact Me After Seeing Any Of My Work Please Click<br>The Contact Me Tab In The Top Left.</p>
+            <p>My Self Mohamed Rizwan a BCA Final Year Student .I AM Basically a Android Developer<br> And A WebPage Designer. Currently Learning Artificial Intelligence.All My Works Releated <br>To Android Development And WebPage Designing Will Be Shown  Here For Reviewing <br>With All The CopyRight Reserved To MG CopyRights2020 Which Is Owned By<br> Myself .If You Would Like To Contact Me After Seeing Any Of My Work Please Click<br>The Contact Me Tab In The Top Left.</p>
            
         </div>
       
