--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@ h2 {
           </ul>
           </div>
         <div class="detel">
-          <h3><SPAN>THE AVAILABLE SERVICES ARE</span> <BR>-ANDROID DEVELOPMENT<BR>- WEB DEVELOPMENT</h3>
+          <h3><SPAN> MORE PROJECTS WILL BE UPDATED SOON....... </h3>
             <BR><BR><BR><H6>To contact For Any Kind of Works Click The Below Icons of Whatsapp or Instagram</H6>
 
         </div>
