--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
         <div class="detel">
             <h1>I'm Mohamed <span>Rizwan</span></h1>
-            <p>Basically i am BCA graduate from calicut university .This website is to showcase my works so you gays can go through small works done by me And a way to contact me </p>
+            <p>Basically i am BCA graduate from calicut university .This website is to showcase my works so you guys can go through small works done by me And a way to contact me </p>
             <a href="cv.html">Download RESUME</a>
         </div>
       
